REDDEV-585 renamed class but forgot to update css

--- a/lib/consort-report.css
+++ b/lib/consort-report.css
@@ -52,7 +52,7 @@
   border-color: rgb(51, 122, 183);
 }
 
-.report-summary-form .remove-form {
+.report-summary-form .cancel-form {
   color: #ffff99;
   font-size: 140%;
   text-decoration: none;
