REDDEV-585 pushing current work - will rebase these commits once everything is settled

--- a/lib/consort-report.css
+++ b/lib/consort-report.css
@@ -32,6 +32,10 @@
   width: 600px;
 }
 
+.report-summary .report-summary-form {
+  width: 100%;
+}
+
 .report-summary-form .card-header {
   font-size: 140%;
 }
