REDDEV-589 Integrate ReportCountsHelp
Integrate the `ReportCountsHelp` component and text changes from
Liz's mockup.

--- a/lib/consort-report.css
+++ b/lib/consort-report.css
@@ -61,3 +61,9 @@
   font-size: 140%;
   text-decoration: none;
 }
+
+/* override red alert border added by REDCap */
+
+.alert.alert-loading {
+  border: 1px solid transparent ! important;
+}
