--- a/lib/consort-report.css
+++ b/lib/consort-report.css
@@ -62,6 +62,12 @@
   text-decoration: none;
 }
 
+/* display a single .invalid-feedback for strategy radios */
+
+.strategy-controls .invalid-feedback {
+  display: block;
+}
+
 /* override red alert border added by REDCap */
 
 .alert.alert-loading {
